ci: add the npm action so the version bumps are synced

--- a/.releaserc.yml
+++ b/.releaserc.yml
@@ -6,10 +6,11 @@ branches:
     - main
     - name: next
       prerelease: true
-
 plugins:
     - '@semantic-release/commit-analyzer'
     - '@semantic-release/release-notes-generator'
+    - - '@semantic-release/npm'
+      - npmPublish: false
     - - '@semantic-release/git'
       - assets:
             ['CHANGELOG.md', 'package.json', 'package-lock.json', 'dist/*.js']
