build: fix the formatting check scripts

--- a/package.json
+++ b/package.json
@@ -43,8 +43,8 @@
         "all": "pnpm run build && pnpm run format && pnpm run lint && pnpm run package && pnpm test",
         "build": "tsc",
         "document": "jsdoc2md src -r -d docs/docs",
-        "format": "prettier --write '**/*.ts' --check '**/*.js', --check '**/*.json'",
-        "format-check": "prettier --check '**/*.ts' --check '**/*.js', --check '**/*.json'",
+        "format": "prettier --write '{src,docs}/**/*.{ts,js,json,md,yaml,yml}'",
+        "format-check": "prettier --check '{src,docs}/**/*.{ts,js,json,md,yaml,yml}'",
         "lint": "eslint",
         "package": "ncc build --source-map --license licenses.txt",
         "test": "jest",
