--- a/docs/package.json
+++ b/docs/package.json
@@ -20,7 +20,8 @@
         "clsx": "^2.0.0",
         "prism-react-renderer": "^2.3.0",
         "react": "^18.0.0",
-        "react-dom": "^18.0.0"
+        "react-dom": "^18.0.0",
+        "typescript": "5.6.3"
     },
     "engines": {
         "node": ">=18.0"
