docs: create a passing build for docusaurus

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,8 @@
 {
     "compilerOptions": {
+        "baseUrl": "./docs",
         "esModuleInterop": true,
+        "jsx": "react-jsx",
         "module": "commonjs",
         "noImplicitAny": true,
         "outDir": "./lib",
@@ -14,5 +16,6 @@
         "megalinter-reports/**/*.js",
         "jest.config.ts",
         "docs"
-    ]
+    ],
+    "extends": "@docusaurus/tsconfig"
 }
