--- a/package.json
+++ b/package.json
@@ -1,17 +1,36 @@
 {
     "author": "Ali Sajid Imami",
+    "browserslist": {
+        "development": [
+            "last 3 chrome version",
+            "last 3 firefox version",
+            "last 5 safari version"
+        ],
+        "production": [
+            ">0.5%",
+            "not dead",
+            "not op_mini all"
+        ]
+    },
     "dependencies": {
         "@actions/core": "^1.11.1"
     },
     "description": "A Github Action to introduce a random delay in a Job",
     "devDependencies": {
+        "@docusaurus/core": "3.7.0",
+        "@docusaurus/preset-classic": "3.7.0",
+        "@docusaurus/types": "^3.7.0",
         "@eslint/eslintrc": "3.2.0",
         "@eslint/js": "9.17.0",
+        "@mdx-js/react": "^3.0.0",
         "@stylistic/eslint-plugin": "2.11.0",
         "@types/eslint__js": "8.42.3",
         "@types/jest": "29.5.14",
         "@types/node": "22.10.1",
+        "@types/react": "^18.0.0",
         "@vercel/ncc": "0.38.3",
+        "clsx": "^2.0.0",
+        "docusaurus-plugin-typedoc": "^1.2.1",
         "eslint": "9.17.0",
         "eslint-plugin-jest": "28.9.0",
         "globals": "15.14.0",
@@ -20,8 +39,13 @@
         "jsdoc-to-markdown": "9.1.1",
         "prettier": "3.4.1",
         "prettier-plugin-multiline-arrays": "3.0.6",
+        "prism-react-renderer": "^2.3.0",
+        "react": "^18.0.0",
+        "react-dom": "^18.0.0",
         "ts-jest": "29.2.5",
         "ts-node": "10.9.2",
+        "typedoc": "^0.27.6",
+        "typedoc-plugin-markdown": "^4.4.1",
         "typescript": "5.7.2",
         "typescript-eslint": "8.19.0"
     },
@@ -42,13 +66,21 @@
     "scripts": {
         "all": "pnpm run build && pnpm run format && pnpm run lint && pnpm run package && pnpm test",
         "build": "tsc",
-        "document": "jsdoc2md src -r -d docs/docs",
+        "docs:build": "docusaurus build",
+        "docs:clear": "docusaurus clear",
+        "docs:deploy": "docusaurus deploy",
+        "docs:serve": "docusaurus serve",
+        "docs:start": "docusaurus start",
+        "docs:typecheck": "tsc",
         "format": "prettier --write '{src,docs}/**/*.{ts,js,json,md,yaml,yml}'",
         "format-check": "prettier --check '{src,docs}/**/*.{ts,js,json,md,yaml,yml}'",
         "lint": "eslint",
         "package": "ncc build --source-map --license licenses.txt",
         "test": "jest",
-        "test:coverage": "jest --coverage"
+        "test:coverage": "jest --coverage",
+        "typedoc": "docusaurus generate-typedoc",
+        "write-heading-ids": "docusaurus write-heading-ids",
+        "write-translations": "docusaurus write-translations"
     },
     "version": "2.8.0-next.1"
 }
