feat: move files to git LFS
Signed-off-by: Ali Sajid Imami <395482+AliSajid@users.noreply.github.com>

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,7 @@
         "**/*.test.ts",
         "megalinter-reports/**/*.js",
         "jest.config.ts",
+        "docusaurus.config.ts",
         "docs"
-    ],
-    "extends": "@docusaurus/tsconfig"
+    ]
 }
