--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "description": "A Github Action to introduce a random delay in a Job",
     "devDependencies": {
         "@docusaurus/core": "3.7.0",
+        "@docusaurus/plugin-content-docs": "^3.7.0",
         "@docusaurus/preset-classic": "3.7.0",
         "@docusaurus/types": "^3.7.0",
         "@eslint/eslintrc": "3.2.0",
         "@eslint/js": "9.17.0",
         "@mdx-js/react": "^3.0.0",
         "@stylistic/eslint-plugin": "2.11.0",
+        "@tsconfig/docusaurus": "^2.0.3",
         "@types/eslint__js": "8.42.3",
         "@types/jest": "29.5.14",
         "@types/node": "22.10.1",
@@ -72,13 +74,13 @@
         "docs:serve": "docusaurus serve",
         "docs:start": "docusaurus start",
         "docs:typecheck": "tsc",
+        "docs:typedoc": "docusaurus generate-typedoc",
         "format": "prettier --write '{src,docs}/**/*.{ts,js,json,md,yaml,yml}'",
         "format-check": "prettier --check '{src,docs}/**/*.{ts,js,json,md,yaml,yml}'",
         "lint": "eslint",
         "package": "ncc build --source-map --license licenses.txt",
         "test": "jest",
         "test:coverage": "jest --coverage",
-        "typedoc": "docusaurus generate-typedoc",
         "write-heading-ids": "docusaurus write-heading-ids",
         "write-translations": "docusaurus write-translations"
     },
