--- a/package.json
+++ b/package.json
@@ -82,5 +82,5 @@
         "write-heading-ids": "docusaurus write-heading-ids",
         "write-translations": "docusaurus write-translations"
     },
-    "version": "2.7.1"
+    "version": "2.8.0-next.3"
 }
