--- a/.mise.toml
+++ b/.mise.toml
@@ -3,7 +3,8 @@
 # SPDX-License-Identifier: MIT
 
 [tools]
+"cargo:mdbook" = "0.4.44"
 node = "22"
 
 [env]
-NODE_OPTIONS="--experimental-vm-modules"
+NODE_OPTIONS = "--experimental-vm-modules"
