--- a/package.json
+++ b/package.json
@@ -1,29 +1,40 @@
 {
     "author": "Ali Sajid Imami",
+    "browserslist": {
+        "development": [
+            "last 3 chrome version",
+            "last 3 firefox version",
+            "last 5 safari version"
+        ],
+        "production": [
+            ">0.5%",
+            "not dead",
+            "not op_mini all"
+        ]
+    },
     "dependencies": {
         "@actions/core": "^1.11.1"
     },
     "description": "A Github Action to introduce a random delay in a Job",
     "devDependencies": {
         "@eslint/eslintrc": "3.2.0",
-        "@eslint/js": "9.15.0",
-        "@stylistic/eslint-plugin": "2.11.0",
+        "@eslint/js": "9.19.0",
+        "@stylistic/eslint-plugin": "3.0.1",
         "@types/eslint__js": "8.42.3",
         "@types/jest": "29.5.14",
-        "@types/node": "22.10.0",
+        "@types/node": "22.13.1",
         "@vercel/ncc": "0.38.3",
-        "eslint": "9.15.0",
-        "eslint-plugin-jest": "28.9.0",
-        "globals": "15.12.0",
+        "eslint": "9.19.0",
+        "eslint-plugin-jest": "28.11.0",
+        "globals": "15.14.0",
         "jest": "29.7.0",
         "js-yaml": "4.1.0",
-        "jsdoc-to-markdown": "9.1.1",
-        "prettier": "3.4.1",
-        "prettier-plugin-multiline-arrays": "3.0.6",
+        "prettier": "3.4.2",
+        "prettier-plugin-multiline-arrays": "4.0.2",
         "ts-jest": "29.2.5",
         "ts-node": "10.9.2",
-        "typescript": "5.7.2",
-        "typescript-eslint": "8.16.0"
+        "typescript": "5.7.3",
+        "typescript-eslint": "8.23.0"
     },
     "keywords": [
         "actions",
@@ -33,7 +44,7 @@
     "license": "MIT",
     "main": "lib/main.js",
     "name": "random-wait-action",
-    "packageManager": "pnpm@9.14.2",
+    "packageManager": "pnpm@10.2.1",
     "private": true,
     "repository": {
         "type": "git",
@@ -42,7 +53,6 @@
     "scripts": {
         "all": "pnpm run build && pnpm run format && pnpm run lint && pnpm run package && pnpm test",
         "build": "tsc",
-        "document": "jsdoc2md src -r -d docs/docs",
         "format": "prettier --write '{src,docs}/**/*.{ts,js,json,md,yaml,yml}'",
         "format-check": "prettier --check '{src,docs}/**/*.{ts,js,json,md,yaml,yml}'",
         "lint": "eslint",
@@ -50,5 +60,5 @@
         "test": "jest",
         "test:coverage": "jest --coverage"
     },
-    "version": "2.7.1"
+    "version": "2.8.0-next.3"
 }
