--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
     "compilerOptions": {
+        "baseUrl": "./docs",
         "esModuleInterop": true,
         "module": "commonjs",
         "noImplicitAny": true,
