build: remove unnecessary fiels
Signed-off-by: Ali Sajid Imami <395482+AliSajid@users.noreply.github.com>

--- a/.gitignore
+++ b/.gitignore
@@ -104,8 +104,4 @@ ltex.*
 # Ignore megalinter files
 megalinter-reports/*
 
-# Ignore generated docusaurus files
-!docs/
-docs/docs
-.docusaurus
-.cache-loader
+guide/book
