docs: add a security assurance case
Signed-off-by: Ali Sajid Imami <395482+AliSajid@users.noreply.github.com>

--- a/.gitignore
+++ b/.gitignore
@@ -105,3 +105,11 @@ ltex.*
 megalinter-reports/*
 
 guide/book
+
+# Vale styles directory
+styles/*
+## Unignore the vocabulary files
+!styles/config/
+
+# Scripts
+!scripts/
