--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -8,6 +8,12 @@
                 "singleQuote": false,
                 "tabWidth": 2
             }
+        },
+        {
+            "files": "*.md",
+            "options": {
+                "tabWidth": 2
+            }
         }
     ],
     "plugins": [
