--- a/.github/workflows/deploy_mdbook.yaml
+++ b/.github/workflows/deploy_mdbook.yaml
@@ -17,6 +17,8 @@ permissions:
 jobs:
   build_book:
     runs-on: ubuntu-latest
+    outputs:
+      deployment_url: ${{ steps.deployment.outputs.page_url }}
     steps:
       - name: Harden Runner
         uses: step-security/harden-runner@0080882f6c36860b6ba35c610c98ce87d4e2f26f # v2.10.2
@@ -34,24 +36,9 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@56afc609e74202658d3ffba0e8f6dda462b719fa # v3
         with:
-          name: book
           path: guide/book
           retention-days: 1
-  deploy_book:
-    runs-on: ubuntu-latest
-    needs: [build_book]
-    env:
-      name: book
-    permissions:
-      pages: write
-      id-token: write
-    outputs:
-      deployment_url: ${{ steps.deployment.outputs.page_url }}
-    steps:
-      - name: Harden Runner
-        uses: step-security/harden-runner@0080882f6c36860b6ba35c610c98ce87d4e2f26f # v2.10.2
-        with:
-          egress-policy: audit
       - name: Deploy to GitHub Pages
+        if: ${{ success() }}
         id: deployment
         uses: actions/deploy-pages@d6db90164ac5ed86f2b6aed7e0febac5b3c0c03e # v4
