--- a/.github/workflows/deploy_mdbook.yaml
+++ b/.github/workflows/deploy_mdbook.yaml
@@ -17,6 +17,9 @@ permissions:
 jobs:
   build_book:
     runs-on: ubuntu-latest
+    permissions:
+      pages: write
+      id-token: write
     outputs:
       deployment_url: ${{ steps.deployment.outputs.page_url }}
     steps:
