--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
         ]
     },
     "dependencies": {
-        "@actions/core": "^1.11.1"
+        "@actions/core": "^1.11.1",
+        "true-myth": "^8.5.0"
     },
     "description": "A Github Action to introduce a random delay in a Job",
     "devDependencies": {
