--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "@types/eslint": "9.6.1",
         "@vercel/ncc": "0.38.3",
         "@vitest/coverage-v8": "^3.1.1",
+        "@vitest/eslint-plugin": "^1.1.42",
         "@vitest/ui": "^3.1.1",
         "eslint": "9.24.0",
         "fast-check": "^4.1.1",
