--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
         "format-check": "prettier --check '{src,docs}/**/*.{ts,js,json,md,yaml,yml}'",
         "lint": "eslint",
         "package": "ncc build --source-map --license licenses.txt",
-        "test": "vitest",
+        "test": "vitest --run",
         "test:coverage": "vitest --coverage"
     },
     "version": "2.9.0-next.3"
