--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,10 @@
         "outDir": "./lib",
         "rootDir": "./src",
         "strict": true,
-        "target": "es6"
+        "target": "es6",
+        "types": [
+            "vitest"
+        ]
     },
     "exclude": [
         "node_modules",
