--- a/renovate.json
+++ b/renovate.json
@@ -11,7 +11,7 @@
         ":pinDevDependencies",
         ":pinSkipCi",
         ":reviewer(AliSajid)",
-        "npm:unpublishSafe\u00b6"
+        "npm:unpublishSafe"
     ],
     "labels": [
         "dependencies",
