--- a/.github/workflows/scorecard.yaml
+++ b/.github/workflows/scorecard.yaml
@@ -1,10 +1,10 @@
 name: Scorecard supply-chain security
 on:
-    branch_protection_rule:
-    schedule:
-        - cron: '30 1 * * 4'
-    push:
-        branches: ['main']
+  branch_protection_rule:
+  schedule:
+    - cron: "30 1 * * 4"
+  push:
+    branches: ["next"]
 
 permissions: read-all
 
