--- a/.github/workflows/sonar-cloud.yaml
+++ b/.github/workflows/sonar-cloud.yaml
@@ -20,7 +20,18 @@ jobs:
       - name: Harden Runner
         uses: step-security/harden-runner@cb605e52c26070c328afc4562f0b4ada7618a84e # v2.10.4
         with:
-          egress-policy: audit
+          disable-sudo: true
+          egress-policy: block
+          allowed-endpoints: >
+            analysis-sensorcache-eu-central-1-prod.s3.amazonaws.com:443
+            analysis-sensorcache-eu-central-1-prod.s3.eu-central-1.amazonaws.com:443
+            api.nuget.org:443
+            api.sonarcloud.io:443
+            binaries.sonarsource.com:443
+            github.com:443
+            registry.npmjs.org:443
+            scanner.sonarcloud.io:443
+            sonarcloud.io:443
 
       - name: Checkout repository
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
