--- a/package.json
+++ b/package.json
@@ -58,5 +58,6 @@
         "test": "vitest --run",
         "test:coverage": "vitest --coverage"
     },
+    "type": "module",
     "version": "2.10.1-next.1"
 }
