feat: modify it to be an ECMAScript module

--- a/package.json
+++ b/package.json
@@ -64,5 +64,6 @@
         "test": "vitest",
         "test:coverage": "vitest --coverage"
     },
-    "version": "2.10.1"
+    "type": "module",
+    "version": "2.10.1-next.1"
 }
