style: ensure prettier and eslint have the same config
Signed-off-by: Ali Sajid Imami <395482+AliSajid@users.noreply.github.com>

--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -20,7 +20,7 @@
         "prettier-plugin-multiline-arrays"
     ],
     "printWidth": 80,
-    "semi": false,
+    "semi": true,
     "singleQuote": true,
     "tabWidth": 4,
     "trailingComma": "none",
