--- a/tsconfig.eslint.json
+++ b/tsconfig.eslint.json
@@ -1,12 +1,21 @@
 {
+    "$schema": "https://json.schemastore.org/tsconfig",
+    "compilerOptions": {
+        "allowJs": true,
+        "noEmit": true
+    },
     "exclude": [
         "dist",
+        "coverage",
         "node_modules",
-        "docs"
+        "lib"
     ],
-    "extends": "./tsconfig.json",
+    "extends": "./tsconfig.base.json",
     "include": [
+        "__fixtures__",
+        "__tests__",
         "src",
-        "__tests__"
+        "eslint.config.mjs",
+        "rollup.config.ts"
     ]
 }
