--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     },
     "description": "A Github Action to introduce a random delay in a Job",
     "devDependencies": {
-        "@eslint/js": "9.25.1",
+        "@eslint/js": "9.25.0",
         "@stylistic/eslint-plugin": "4.2.0",
         "@types/eslint": "9.6.1",
         "@vercel/ncc": "0.38.3",
@@ -30,6 +30,7 @@
         "globals": "16.0.0",
         "prettier": "3.5.3",
         "prettier-plugin-multiline-arrays": "4.0.3",
+        "tslib": "^2.8.1",
         "typescript": "5.7.3",
         "typescript-eslint": "8.31.0",
         "vitest": "3.1.2"
@@ -49,19 +50,13 @@
         "url": "git+https://github.com/AliSajid/random-wait-action"
     },
     "scripts": {
-        "all": "pnpm run build && pnpm run format && pnpm run lint && pnpm run package && pnpm test",
-        "build": "tsc",
-        "docs:build": "docusaurus build",
-        "docs:clear": "docusaurus clear",
-        "docs:deploy": "docusaurus deploy",
-        "docs:serve": "docusaurus serve",
-        "docs:start": "docusaurus start",
-        "docs:typecheck": "tsc",
-        "format": "prettier --write '{src,docs}/**/*.{ts,js,json,md,yaml,yml}'",
-        "format-check": "prettier --check '{src,docs}/**/*.{ts,js,json,md,yaml,yml}'",
-        "lint": "eslint",
-        "package": "ncc build --source-map --license licenses.txt",
-        "test": "vitest",
+        "all": "pnpm run format:check && pnpm run lint:check && pnpm run test && pnpm run package",
+        "format:check": "prettier --check '{src,docs}/**/*.{ts,js,json,md,yaml,yml}'",
+        "format:write": "prettier --write '{src,docs}/**/*.{ts,js,json,md,yaml,yml}'",
+        "lint:check": "eslint .",
+        "lint:fix": "eslint . --fix",
+        "package": "rollup --config rollup.config.ts --configPlugin @rollup/plugin-typescript",
+        "test": "vitest --run",
         "test:coverage": "vitest --coverage"
     },
     "type": "module",
