--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,7 @@
     ],
     "extends": "./tsconfig.base.json",
     "include": [
-        "src"
+        "src",
+        "rollup.config.ts"
     ]
 }
