--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -64,7 +64,7 @@ jobs:
           subject-path: dist/index.js
 
       - name: Move attestation file to dist/
-        run: mv ${{ steps.attest.outputs.bundle-path }} dist/attestation.jsonl
+        run: mv ${{ steps.attest.outputs.bundle-path }} dist/attestation.intoto.jsonl
 
       - name: Semantic Release
         uses: cycjimmy/semantic-release-action@0a51e81a6baff2acad3ee88f4121c589c73d0f0e # v4.2.0
