--- a/.github/workflows/sonar-cloud.yaml
+++ b/.github/workflows/sonar-cloud.yaml
@@ -12,6 +12,8 @@ permissions:
 
 jobs:
   sonarcloud:
+    permissions:
+      contents: read # for actions/checkout to fetch code
     name: SonarCloud
     runs-on: ubuntu-latest
     steps:
