--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -16,6 +16,7 @@ jobs:
     permissions:
       id-token: write
       attestations: write
+      contents: write
       issues: write
       pull-requests: write
     steps:
