ci(release): allow the release workflow to avoid rule violations

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -75,4 +75,4 @@ jobs:
             @semantic-release/exec@6
             @semantic-release/git@10
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.PAT_GITHUB }}
