--- a/action.yaml
+++ b/action.yaml
@@ -19,7 +19,7 @@ outputs:
     description: "The time waited in seconds"
 runs:
   using: "node20"
-  main: "dist/index.js"
+  main: "dist/index.cjs"
 branding:
   icon: "clock"
   color: "blue"
