--- a/.gitignore
+++ b/.gitignore
@@ -94,6 +94,9 @@ typings/
 .DS_Store
 Thumbs.db
 
+# Ignore the vscode files
+.vscode/
+
 # Ignore built ts files
 __tests__/runner/*
 lib/**/*
@@ -108,6 +111,7 @@ guide/book
 
 # Vale styles directory
 styles/*
+
 ## Unignore the vocabulary files
 !styles/config/
 
