ci(mise): update the list of mise tasks
Signed-off-by: Ali Sajid Imami <395482+AliSajid@users.noreply.github.com>

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,16 +1,7 @@
 {
     "compilerOptions": {
-        "baseUrl": "./docs",
-        "esModuleInterop": true,
-        "module": "ESNext",
-        "moduleDetection": "force",
-        "moduleResolution": "bundler",
-        "noImplicitAny": true,
-        "outDir": "lib",
-        "rootDir": "src",
-        "skipLibCheck": true,
-        "strict": true,
-        "target": "ESNext"
+        "outDir": "./dist",
+        "rootDir": "src"
     },
     "exclude": [
         "node_modules",
