--- a/.gitignore
+++ b/.gitignore
@@ -107,6 +107,19 @@ ltex.*
 # Ignore megalinter files
 megalinter-reports/*
 
-# Ignore generated docusaurus files
-!docs/
-docs/docs
+guide/book
+
+# Vale styles directory
+styles/*
+
+## Unignore the vocabulary files
+!styles/config/
+
+# Scripts
+!scripts/
+
+!tsconfig.base.json
+
+# mise local configuration
+.mise.local.toml
+.mise.*.local.toml
