--- a/.github/workflows/sonar-cloud.yaml
+++ b/.github/workflows/sonar-cloud.yaml
@@ -27,6 +27,7 @@ jobs:
             api.sonarcloud.io:443
             binaries.sonarsource.com:443
             github.com:443
+            mise.jdx.dev:443
             registry.npmjs.org:443
             scanner.sonarcloud.io:443
             sonarcloud.io:443
@@ -36,22 +37,14 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Set up pnpm
-        uses: pnpm/action-setup@41ff72655975bd51cab0327fa583b6e92b6d3061 # v4.2.0
+      - name: Install mise
+        uses: jdx/mise-action@f8dfbcc150159126838e44b882bf34bd98fd90f3 # v2.1.0
         with:
-          run_install: false
-
-      - name: Set Node.js 22.x
-        uses: actions/setup-node@2028fbc5c25fe9cf00d9f06a71cc4710d4507903 # v6.0.0
-        with:
-          node-version: 22.x
-          cache: pnpm
-
-      - name: Install dependencies
-        run: pnpm install
+          version: 2024.1.0
+          install_args: --yes
 
       - name: Generate Coverage Report
-        run: pnpm run test:coverage
+        run: mise run test
 
       - name: SonarCloud Scan
         uses: SonarSource/sonarqube-scan-action@fd88b7d7ccbaefd23d8f36f73b59db7a3d246602 # v6.0.0
