--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -30,6 +30,7 @@ jobs:
             files.pythonhosted.org:443
             fulcio.sigstore.dev:443
             github.com:443
+            mise.jdx.dev:443
             pypi.org:443
             registry.npmjs.org:443
             rekor.sigstore.dev:443
@@ -41,21 +42,14 @@ jobs:
           fetch-depth: 0
           persist-credentials: false
 
-      - uses: pnpm/action-setup@41ff72655975bd51cab0327fa583b6e92b6d3061 # v4.2.0
+      - name: Install mise
+        uses: jdx/mise-action@f8dfbcc150159126838e44b882bf34bd98fd90f3 # v2.1.0
         with:
-          run_install: false
+          version: 2024.1.0
+          install_args: --yes
 
-      - name: Set Node.js 22.x
-        uses: actions/setup-node@2028fbc5c25fe9cf00d9f06a71cc4710d4507903 # v6.0.0
-        with:
-          node-version: 22.x
-          cache: pnpm
-
-      - name: Install dependencies
-        run: pnpm install
-
-      - name: Run the build process
-        run: pnpm run all
+      - name: Build and verify
+        run: mise run ci
 
       - name: Attest build provenance
         id: attest
